[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/jugador.png" type="Texture" id=1]
[ext_resource path="res://Escenas/Nave.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.49202, 2.99227 )

[sub_resource type="Animation" id=2]
resource_name = "disparado"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "eliminar"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "vivo"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="Nave" type="KinematicBody2D" groups=[
"nave",
]]
position = Vector2( 104.09, 235.483 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="PuntoAparicionLaser" type="Position2D" parent="."]
position = Vector2( 0, -3.18616 )

[node name="TimerDisparo" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "vivo"
anims/disparado = SubResource( 2 )
anims/vivo = SubResource( 3 )
[connection signal="timeout" from="TimerDisparo" to="." method="_on_TimerDisparo_timeout"]
